Add more detailed Russian debug logging

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -6,3 +6,7 @@ load: STARTUP
 authors: [ bejiihiu.xs ]
 folia-supported: true
 description: "Echo Rift event plugin for Folia-only SMP."
+commands:
+  echorift:
+    description: "Управление событиями EchoRift (op-only)."
+    usage: "/echorift <start|stop|status|spawn|collapse|reload>"
