Prefer near-player spawn with fallback

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -28,9 +28,11 @@ points:
     - "world"
   min-distance-blocks: 500
   coordinate-mode: "random-range"
+  force-near-player: true
   custom-list:
     - "250, -120"
   random-range:
+    # Используется только если игроков нет.
     min-x: -2000
     max-x: 2000
     min-z: -2000
